--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
 <title>ﾘﾅｺ帝国tp_cafe17</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
-<link rel="stylesheet" href="css/style.css">
+<link rel="https://a-chaaa.github.io/rinakoteikoku/stylesheet" href="https://a-chaaa.github.io/rinakoteikoku/css/style.css">
 </head>
 
 <body>
