--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>signal and signaless</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.css">
+<link rel="stylesheet" href="https://a-chaaa.github.io/rinakoteikoku/inview.css">
 <link rel="stylesheet" href="https://a-chaaa.github.io/rinakoteikoku/style.css">
 </head>
 
