--- a/index2.html
+++ b/index2.html
@@ -169,7 +169,7 @@
 </svg>
 
 <!--jQueryファイルの読み込み-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://a-chaaa.github.io/rinakoteikoku/jquery.min.js"></script>
 
 <!--スライドショー（vegas）-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.js"></script>
