--- a/index.html
+++ b/index.html
@@ -172,19 +172,19 @@
 
 <!--スライドショー（vegas）-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.js"></script>
-<script src="js/vegas.js"></script>
+<script src="a-chaaa.github.io/rinakoteikoku/vegas.js"></script>
 
 <!--スライドショー（slick）-->
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script src="js/slick.js"></script>
+<script src="a-chaaa.github.io/rinakoteikoku/slick.js"></script>
 
 <!--パララックス（inview）-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"></script>
-<script src="js/jquery.inview_set.js"></script>
+<script src="a-chaaa.github.io/rinakoteikoku/jquery.inview_set.js"></script>
 
 <!--メニュー開閉用のスクリプト-->
 <div id="menubar_hdr"></div>
-<script src="js/openclose_tp.js"></script>
+<script src="a-chaaa.github.io/rinakoteikoku/openclose_tp.js"></script>
 
 <!--ページの上部へ戻るボタン-->
 <p class="pagetop"><a href="#">↑</a></p>
