--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <title>signal and signaless</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="a-chaaa.github.io/rinakoteikoku/style.css">
 </head>
 
 <body>
@@ -13,13 +13,13 @@
 <div id="container">
 
 <header>
-<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="Sample Cafe"></a></h1>
+<h1 id="logo"><a href="a-chaaa.github.io/rinakoteikoku/index.html"><img src="a-chaaa.github.io/rinakoteikoku/logo.png" alt="Sample Cafe"></a></h1>
 </header>
 
 <main>
 
 <section>
-<p><img src="images/1.jpg" alt=""></p>
+<p><img src="a-chaaa.github.io/rinakoteikoku/1.jpg" alt=""></p>
 
 </section>
 
