--- a/about.html
+++ b/about.html
@@ -13,13 +13,13 @@
 <div id="container">
 
 <header>
-<h1 id="logo"><a href="htpps://a-chaaa.github.io/rinakoteikoku/index.html"><img src="htpps://a-chaaa.github.io/rinakoteikoku/logo.png" alt="Sample Cafe"></a></h1>
+<h1 id="logo"><a href="https://a-chaaa.github.io/rinakoteikoku/index.html"><img src="https://a-chaaa.github.io/rinakoteikoku/logo.png" alt="Sample Cafe"></a></h1>
 </header>
 
 <main>
 
 <section>
-<p><img src="htpps://a-chaaa.github.io/rinakoteikoku/1.jpg" alt=""></p>
+<p><img src="https://a-chaaa.github.io/rinakoteikoku/1.jpg" alt=""></p>
 
 </section>
 
