--- a/about.html
+++ b/about.html
@@ -132,9 +132,9 @@ opacity: 0;<br>
 3. jsフォルダ内の「js/jquery.inview_set.js」。<br>
 4. cssフォルダ内の「inview.css」。</p>
 <p class="c"><strong class="color-theme">↓ 「blur」スタイルの適用例</strong><br>
-<img src="images/3.jpg" alt="" class="blur"></p>
+<img src="https://a-chaaa.github.io/rinakoteikoku/3.jpg" alt="" class="blur"></p>
 <p class="c"><strong class="color-theme">↓ 「up」スタイルの適用例</strong><br>
-<img src="images/3.jpg" alt="" class="up"></p>
+<img src="https://a-chaaa.github.io/rinakoteikoku/3.jpg" alt="" class="up"></p>
 <p class="c"><strong class="color-theme">↓ 「left」スタイルの適用例</strong><br>
 <img src="images/3.jpg" alt="" class="left"></p>
 <p class="c"><strong class="color-theme">↓ 「right」スタイルの適用例</strong><br>
@@ -202,11 +202,11 @@ font-size: 0.7rem;<br>
 
 <!--パララックス（inview）-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"></script>
-<script src="js/jquery.inview_set.js"></script>
+<script src="https://a-chaaa.github.io/rinakoteikoku/jquery.inview_set.js"></script>
 
 <!--メニュー開閉用のスクリプト-->
 <div id="menubar_hdr"></div>
-<script src="js/openclose_tp.js"></script>
+<script src="https://a-chaaa.github.io/rinakoteikoku/openclose_tp.js"></script>
 
 <!--ページの上部へ戻るボタン-->
 <p class="pagetop"><a href="#">↑</a></p>
