--- a/about.html
+++ b/about.html
@@ -5,170 +5,75 @@
 <title>signal and signaless</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.css">
 <link rel="stylesheet" href="https://a-chaaa.github.io/rinakoteikoku/style.css">
 </head>
 
-<body>
+<body class="home index2">
 
-<div id="container">
+<!--スライドショー-->
+<div id="mainimg"></div>
+
+<!--スクロールを促すアイコン-->
+<div class="scroll"><img src="images/arrow1.gif" alt=""></div>
 
 <header>
-<h1 id="logo"><a href="https://a-chaaa.github.io/rinakoteikoku/index.html"><img src="https://a-chaaa.github.io/rinakoteikoku/logo.png" alt="Sample Cafe"></a></h1>
+<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="Sample Cafe"></a></h1>
 </header>
+
+<div id="container">
 
 <main>
 
 <section>
-<p><img src="https://a-chaaa.github.io/rinakoteikoku/1.jpg" alt=""></p>
 
-</section>
+<h2>Top<span>トップ</span></h2>
+無名の学生だからこそ的なことかけたらいいんじゃないかな！！
 
-<section id="about">
-
-<h3>2021年10月「以前」に弊社テンプレートを利用した事のあるお客様へ</h3>
-<p>2021年11月以降からの配布テンプレートについて、かなり仕様が変更されましたので、メインとなる内容のみピックアップさせて頂きます。<br>
-※今後しばらく仕様の変更が入るかもしれません。</p>
-<ul>
-<li><span class="color-check">モバイルファースト</span>のcssに変更しました。小さな端末からの設定になるのでご注意下さい。</li>
-<li><span class="color-check">IE10以前は考慮しておりません。</span>Microsoft社のIEサポートが2022年6月で終了する為、IE11の動作チェックも近いうちに終了させて頂きます。</li>
-<li>floatでのレイアウトから、主にflexボックスを使ったレイアウトへ変更されました。</li>
-</ul>
 
 </section>
 
 <section>
+<h2>PV<span>プロモーションビデオ</span></h2>
+作ったPV載せたい！！
+</section>
 
-<h2>作品紹介</h2>
 
-<p>宮沢賢治の短編童話
-    1923年5月11日から23日まで
-    岩手毎日新聞にて掲載された<br>
-    数少ない生前発表童話の一つ<br><br>
-    信号機のシグナルとシグナレスの
-身分違いの切ないラブストーリー<br>
+<section>
 
-決して動くことができない信号機の彼らにできることは、相手を思い、言葉を交わすことだけ......。<br>
-<a href="https://www.aozora.gr.jp/cards/000081/files/2655_30646.html" target="_blank">作品はこちら</a></p>
+<h2>Photo's<span>イベントの写真</span></h2>
 
-<h3>titleタグ、copyright、metaタグ、他の設定</h3>
-<p><strong class="color-theme">titleタグの設定はとても重要です。念入りにワードを選んで適切に入力しましょう。</strong><br>
-まず、htmlソースが見れる状態にして、<br>
-<span class="look">&lt;title&gt;飲食店向け 無料ホームページテンプレート tp_cafe17&lt;/title&gt;</span><br>
-を編集しましょう。<br>
-あなたのホームページ名が「Sample Cafe」だとすれば、<br>
-<span class="look">&lt;title&gt;Sample Cafe&lt;/title&gt;</span><br>
-とすればＯＫです。SEO対策もするなら冒頭に重要なワードを入れておきましょう。</p>
-<p><strong class="color-theme">copyrightを変更しましょう。</strong><br>
-続いてhtmlの下の方にある、<br>
-<span class="look">Copyright&copy; Sample Cafe All Rights Reserved.</span><br>
-の部分もあなたのサイト名に変更します。</p>
-<p><strong class="color-theme">metaタグを変更しましょう。</strong><br>
-htmlソースが見える状態にしてmetaタグを変更しましょう。</p>
-<p>ソースの上の方に、<br>
-<span class="look">content=&quot;ここにサイト説明を入れます&quot;</span><br>
-という部分がありますので、テキストをサイトの説明文に入れ替えます。検索結果の文面に使われる場合もありますので、見た人が来訪したくなるような説明文を簡潔に書きましょう。</p>
-<p><strong class="color-theme">h1ロゴのaltタグも変更しましょう。</strong><br>
-html側に、<br>
-<span class="look">alt=&quot;Sample Cafe&quot;</span><br>
-となっている箇所があるので、この部分もあなたのサイト名に変更しましょう。</p>
+<div class="pickup">
 
-<h3>トップページのロゴアニメーション（vivus）の解説</h3>
-<p>トップページのロゴアニメーションには、vivusを使用しています。<br>
-テンプレート内の解説及び、当サイト上でのマニュアル以外のサポートは基本的には行なっておりませんので、使いこなしたい方はGoogle検索などかけてみて下さい。</p>
-<p>vivus 公式サイト：<a href="https://maxwellito.github.io/vivus/" target="_blank">https://maxwellito.github.io/vivus/</a></p>
-<p><strong class="color-theme">当テンプレートのロゴアニメーションを置き換えたい人は</strong><br>
-<a href="https://template-party.com/tips/tips20211202_vivus.html">弊社マニュアル</a>をご覧下さい。※Illustratorが必要です。</p>
-<p><strong class="color-theme">ロゴアニメーションが作れない！という人は</strong><br>
-<a href="index2.html">静止画ロゴでのトップページ</a>もご用意しています。<br>
-使い方は簡単で、index.htmlの冒頭が、<br>
-<span class="look">&lt;body class=&quot;home&quot;&gt;</span><br>
-となっているのを、<br>
-<span class="look">&lt;body class=&quot;home <span class="color-check">index2</span>&quot;&gt;</span><br>
-にするだけです。</p>
+<div class="list">
+<figure><img src="images/sample1.jpg" alt=""></figure>
+</div>
 
-<h3>トップページのスライドショー（vegas）の解説</h3>
-<p>トップページのスライドショーには、vegasを使用しています。<br>
-テンプレート内の解説及び、当サイト上でのマニュアル以外のサポートは基本的には行なっておりませんので、使いこなしたい方はGoogle検索などかけてみて下さい。</p>
-<p>vegas 公式サイト：<a href="https://vegas.jaysalvat.com/" target="_blank">https://vegas.jaysalvat.com/</a><br>
-オプション一覧：<a href="https://vegas.jaysalvat.com/documentation/settings/" target="_blank">https://vegas.jaysalvat.com/documentation/settings/</a><br>
-トランジション一覧：<a href="https://vegas.jaysalvat.com/documentation/transitions/" target="_blank">https://vegas.jaysalvat.com/documentation/transitions/</a></p>
-<p>上記の「トランジション一覧」で、色々なスライドショーのパターンを見る事ができます。お好みで設定を変更してみて下さい。jsフォルダのvegas.jsの値を変更するだけです。</p>
-<p>vegasの設定は、jsフォルダのvegas.jsにあります。枚数を追加したい際もここに追加するだけでOKです。<br>
-※閲覧しているウィンドウサイズにより、スライドショー画像はトリミングされますので、切り抜かれてもおかしくない画像をご用意下さい。</p>
-<p><strong class="color-theme">vegasを使う為に必要なタグ、ファイル類。</strong><br>
-1. html冒頭のhead内にある、「vegas.min.css」の読み込みの１行。<br>
-2. html下部にある、「jQueryファイルの読み込み」のタグ。※下のjsファイルより先に読み込んで下さい。<br>
-3. その下にある、「スライドショー（vegas）」からの数行のタグ。<br>
-4. jsフォルダ内の「js/vegas.js」。</p>
+<div class="list">
+<figure><img src="images/sample2.jpg" alt=""></figure>
+</div>
 
-<h3>トップページの「Photo's（お料理の写真）」の横スライドショーについて</h3>
-<p>こちらの横スライドショーには、slickを使用しています。<br>
-テンプレート内の解説及び、当サイト上でのマニュアル以外のサポートは基本的には行なっておりませんので、使いこなしたい方はGoogle検索などかけてみて下さい。</p>
-<p><a href="https://kenwheeler.github.io/slick/" target="_blank">slick 公式サイト</a></p>
-<p>写真の縦横サイズを予め揃えておくと綺麗に並びます。<br>
-枚数は自由に変更できます。html側に既存の写真ブロックをコピペして新しい画像ファイル名に書き換えて下さい。<br>
-スタイル変更は、cssフォルダのstyle.cssでできます。それ以外に、jsフォルダのslick.jsにも設定があります。</p>
-<p><strong class="color-theme">slickを使う為に必要なタグ、ファイル類。</strong><br>
-1. html下部にある、「jQueryファイルの読み込み」のタグ。※下のjsファイルより先に読み込んで下さい。<br>
-2. その下にある、「スライドショー（slick）」からの数行のタグ。<br>
-3. jsフォルダ内の「js/slick.js」。</p>
+<div class="list">
+<figure><img src="images/sample3.jpg" alt=""></figure>
+</div>
 
-<h2>このh2タグのフェードイン効果をつけたくない場合</h2>
-<p>jsフォルダのjquery.invie_set.jsの上の方にある、<br>
-$('main h2, .blur')<br>
-を、<br>
-$('.blur')<br>
-とし、次に、cssフォルダのstyle.cssの、<br>
-main h2 {<br>
-の<br>
-opacity: 0;<br>
-の１行を削除すればOKです。</p>
+<div class="list">
+<figure><img src="images/sample4.jpg" alt=""></figure>
+</div>
 
-<h3>アニメーション対象が画面に現れたらアクションを起こす</h3>
-<p>h2の見出しがふわっと出現したり、写真が下からふわっと浮き上がったり、アニメーション対象が画面に現れたらアクションを起こす、という処理はinviewで行なっています。</p>
-<p><strong class="color-theme">inviewを使う為に必要なタグ、ファイル類。</strong><br>
-1. html下部にある、「jQueryファイルの読み込み」のタグ。※下のjsファイルより先に読み込んで下さい。<br>
-2. その下にある、「パララックス（inview）」からの数行のタグ。<br>
-3. jsフォルダ内の「js/jquery.inview_set.js」。<br>
-4. cssフォルダ内の「inview.css」。</p>
-<p class="c"><strong class="color-theme">↓ 「blur」スタイルの適用例</strong><br>
-<img src="https://a-chaaa.github.io/rinakoteikoku/3.jpg" alt="" class="blur"></p>
-<p class="c"><strong class="color-theme">↓ 「up」スタイルの適用例</strong><br>
-<img src="https://a-chaaa.github.io/rinakoteikoku/3.jpg" alt="" class="up"></p>
-<p class="c"><strong class="color-theme">↓ 「left」スタイルの適用例</strong><br>
-<img src="images/3.jpg" alt="" class="left"></p>
-<p class="c"><strong class="color-theme">↓ 「right」スタイルの適用例</strong><br>
-<img src="images/3.jpg" alt="" class="right"></p>
-<p class="c"><strong class="color-theme">↓ 「transform1」スタイルの適用例</strong><br>
-<img src="images/3.jpg" alt="" class="transform1"></p>
-<p class="c"><strong class="color-theme">↓ 「transform2」スタイルの適用例</strong><br>
-<img src="images/3.jpg" alt="" class="transform2"></p>
+<div class="list">
+<figure><img src="images/sample5.jpg" alt=""></figure>
+</div>
 
-<h2>About Google Fonts<span>英語表記に使っているフォント（↑）について</span></h2>
-<p>cssフォルダのstyle.cssの冒頭で<a href="https://fonts.google.com/" target="_blank">Google Fonts</a>を読み込んでそれを指定しています。英語専用フォントです。<br>
-変更する事もできますので、気になる人は<a href="https://template-party.com/tips/tips13.html">Google Fontsマニュアル</a>をご覧下さい。</p>
+<div class="list">
+<figure><img src="images/sample6.jpg" alt=""></figure>
+</div>
 
-<h3>フォントサイズ（rem）について</h3>
-<p>cssフォルダのstyle.cssで、基準となるフォントサイズを「２箇所」記載しています。<br>
-全体的にフォントサイズを大きくまたは小さくしたいなら、この基準サイズだけを変更すればOKです。</p>
-<p>１つ目はstyle.cssの冒頭に記載されている以下。<br>
-<span class="look">font-size: 14px;</span><br>
-２つ目は下の方にある、画面幅800px以上の端末向けで、以下。<br>
-<span class="look">font-size: 18px;</span></p>
-<p>上記以外のフォントサイズは全て「rem」の単位がついていますが、これは、上のpxのサイズに「相対的」に出しているサイズになります。<br>
-例えば、800px未満の画面幅の時の基準サイズは「14px」なので、他の要素などで28pxで表示させたい場合は、<br>
-28px ÷ 14px = 2rem(28px)<br>
-となります。（cssの指定は、font-size: 2rem;　となる。）</p>
-<p>10pxにしたい場合も同様です。この場合、<br>
-10px ÷ 14 = 0.7142...<br>
-と小数点が続いてしまいますが、厳密に出す必要はないので、適当に切り上げて、<br>
-font-size: 0.7rem;<br>
-あたりにしておけばOKです。</p>
-<p>または計算などせず、「見た目」でremの数値を決めてしまってもいいでしょう。<br>
-実際このテンプレートのremは、厳密に割り出したわけじゃなく、雰囲気(何となく適当)で指定しています。</p>
-<p>emや%などは継承の問題が発生しますがremだとこれが起きないので便利です。</p>
+</div>
+<!--/.pickup-->
 
 </section>
+
 
 </main>
 
@@ -180,7 +85,7 @@ font-size: 0.7rem;<br>
 <li><a href="#"><img src="images/icon_youtube.png" alt="YouTube"></a></li>
 <li><a href="#"><img src="images/icon_line.png" alt="LINE"></a></li>
 </ul>
-<small>Copyright&copy; <a href="index.html">Sample Cafe</a> All Rights Reserved.</small>
+<small>Copyright&copy; <a href="index.html">Rinako teikoku 2022</small>
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </footer>
 
@@ -190,25 +95,52 @@ font-size: 0.7rem;<br>
 <!--メインメニュー-->
 <nav id="menubar">
 <ul>
-<li><a href="index.html">Home<span>ホーム</span></a></li>
-<li><a href="about.html">About<span>お店について</span></a></li>
-<li><a href="menu.html">Cafe Menu<span>メニューのご紹介</span></a></li>
+<li><a href="about.html">Top<span>トップ</span></a></li>
+<li><a href="index2.html">About<span>作品について</span></a></li>
+<li><a href="index.html">Event goods<span>イベントグッズ</span></a></li>
 <li><a href="access.html">Access<span>アクセス</span></a></li>
 </ul>
 </nav>
 
+<!--アニメーションロゴ-->
+<svg id="svg-logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 1000 300" style="enable-background:new 0 0 1000 300;" xml:space="preserve">
+<image xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/logo.svg" width="100%" height="100%" mask="url(#clipmask)"></image>
+<mask id="clipmask" maskUnits="objectBoundingBox">
+<path d="M9.67,257s151.84-205,138-218.43c-12.17-11.73-42,4.34-30.56,50.6,14.41,58.36,42.49,129.54,7.83,152.83-37.2,25-87.17,8.54-99.07-48.28C10.51,120.58,126.8,44.24,168.54,59s37.73,120.19,37.73,120.19c-17.93-36.31-49.61,28-35.3,33.16s28.38-20.3,28.38-20.3c1.31,44.53,41.37,21.45,55.22-17.9-9.1,23.41-9.6,42.13-9.6,42.13,5.2-8.46,32.31-46.72,38.86-40.39,1.95,7.81-5.68,27.94-5.68,27.94,7.81-.65,29.47-33.18,36.89-28.81,6.56,3.86-18,31.05-5,38.86s34-13.33,39.84-20.49,14.3-31.87,14.3-31.87L331.84,268.18s45.61-100.28,66.42-96.38,5.14,37.65-20.51,37.45c17.56,15.61,60.48,2.78,81.33-39.16,22-44.3,26.43-66.25,17-67.11-9.84-.89-47.64,99.32-23.26,113.41,23.32,13.48,47.64-25.72,47.64-25.72s9.61,3.73,15.21-3.36c5.11-6.46,11.48-18.74,3.13-22.81-7.94-3.88-26.93,28.6-17,43.61,10.07,15.21,42.86,8.86,61.29-19.23C650.32,56,698.28-11,768.32,21S758.55,180.6,710,158.86c-46-20.58,1.81-57.18,1.81-57.18s-11.24,26,7.08,30.68c27.38,7,66.23-61.43,30.91-80.69-37.7-20.56-88.6,13.33-115.92,87-22.58,60.9-4.92,115.19,44.63,119.13S770.68,225,781,204.49c29.56-58.94,47-26,47-26-11.54-28-53.2,13.16-36.64,33.82,11.5,14.34,29.48-22.27,29.48-22.27,1,34.68,23.18,35.47,55.23-6.1s37.52-63.78,29.86-67.11c-14.77-6.42-74.41,157.91-43.35,167.62,20.56,6.42,44-59.73,4.82-78.35,34.36,7.7,55.88-13.08,55.88-13.08s15.32-2.55,20.61-9.95,6.31-16.65,0-18.37c-9-2.45-26.78,26.63-16.21,43.54s48.94,4.09,61.55-19.8"/>
+</mask>
+</svg>
+
 <!--jQueryファイルの読み込み-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+<!--スライドショー（vegas）-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.js"></script>
+<script src="js/vegas.js"></script>
+
+<!--スライドショー（slick）-->
+<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="js/slick.js"></script>
+
 <!--パララックス（inview）-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"></script>
-<script src="https://a-chaaa.github.io/rinakoteikoku/jquery.inview_set.js"></script>
+<script src="js/jquery.inview_set.js"></script>
 
 <!--メニュー開閉用のスクリプト-->
 <div id="menubar_hdr"></div>
-<script src="https://a-chaaa.github.io/rinakoteikoku/openclose_tp.js"></script>
+<script src="js/openclose_tp.js"></script>
 
 <!--ページの上部へ戻るボタン-->
 <p class="pagetop"><a href="#">↑</a></p>
+<!-- ロゴアニメーション（vivus） -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.4.6/vivus.min.js"></script>
+<script>
+new Vivus('svg-logo', {
+start:'autostart',
+type: 'scenario-sync',
+duration: 100,
+forceRender: false,
+});
+</script>
+
 </body>
 </html>
