--- a/about.html
+++ b/about.html
@@ -15,10 +15,10 @@
 <div id="mainimg"></div>
 
 <!--スクロールを促すアイコン-->
-<div class="scroll"><img src="images/arrow1.gif" alt=""></div>
+<div class="scroll"><img src="https://a-chaaa.github.io/rinakoteikoku/arrow1.gif" alt=""></div>
 
 <header>
-<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="Sample Cafe"></a></h1>
+<h1 id="logo"><a href="https://a-chaaa.github.io/rinakoteikoku/index.html"><img src="https://a-chaaa.github.io/rinakoteikoku/logo.png" alt="Sample Cafe"></a></h1>
 </header>
 
 <div id="container">
@@ -46,27 +46,27 @@
 <div class="pickup">
 
 <div class="list">
-<figure><img src="images/sample1.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample1.jpg" alt=""></figure>
 </div>
 
 <div class="list">
-<figure><img src="images/sample2.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample2.jpg" alt=""></figure>
 </div>
 
 <div class="list">
-<figure><img src="images/sample3.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample3.jpg" alt=""></figure>
 </div>
 
 <div class="list">
-<figure><img src="images/sample4.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample4.jpg" alt=""></figure>
 </div>
 
 <div class="list">
-<figure><img src="images/sample5.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample5.jpg" alt=""></figure>
 </div>
 
 <div class="list">
-<figure><img src="images/sample6.jpg" alt=""></figure>
+<figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt=""></figure>
 </div>
 
 </div>
@@ -79,11 +79,11 @@
 
 <footer>
 <ul class="icon">
-<li><a href="#"><img src="images/icon_facebook.png" alt="Facebook"></a></li>
-<li><a href="#"><img src="images/icon_twitter.png" alt="Twitter"></a></li>
-<li><a href="#"><img src="images/icon_instagram.png" alt="Instagram"></a></li>
-<li><a href="#"><img src="images/icon_youtube.png" alt="YouTube"></a></li>
-<li><a href="#"><img src="images/icon_line.png" alt="LINE"></a></li>
+<li><a href="#"><img src="https://a-chaaa.github.io/rinakoteikoku/icon_facebook.png" alt="Facebook"></a></li>
+<li><a href="#"><img src="https://a-chaaa.github.io/rinakoteikoku/icon_twitter.png" alt="Twitter"></a></li>
+<li><a href="#"><img src="https://a-chaaa.github.io/rinakoteikoku/icon_instagram.png" alt="Instagram"></a></li>
+<li><a href="#"><img src="https://a-chaaa.github.io/rinakoteikoku/icon_youtube.png" alt="YouTube"></a></li>
+<li><a href="#"><img src="https://a-chaaa.github.io/rinakoteikoku/icon_line.png" alt="LINE"></a></li>
 </ul>
 <small>Copyright&copy; <a href="index.html">Rinako teikoku 2022</small>
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
@@ -95,10 +95,10 @@
 <!--メインメニュー-->
 <nav id="menubar">
 <ul>
-<li><a href="about.html">Top<span>トップ</span></a></li>
-<li><a href="index2.html">About<span>作品について</span></a></li>
-<li><a href="index.html">Event goods<span>イベントグッズ</span></a></li>
-<li><a href="access.html">Access<span>アクセス</span></a></li>
+<li><a href="https://a-chaaa.github.io/rinakoteikoku/about.html">Top<span>トップ</span></a></li>
+<li><a href="https://a-chaaa.github.io/rinakoteikoku/index2.html">About<span>作品について</span></a></li>
+<li><a href="https://a-chaaa.github.io/rinakoteikoku/index.html">Event goods<span>イベントグッズ</span></a></li>
+<li><a href="https://a-chaaa.github.io/rinakoteikoku/access.html">Access<span>アクセス</span></a></li>
 </ul>
 </nav>
 
@@ -115,19 +115,19 @@
 
 <!--スライドショー（vegas）-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.js"></script>
-<script src="js/vegas.js"></script>
+<script src="https://a-chaaa.github.io/rinakoteikoku/vegas.js"></script>
 
 <!--スライドショー（slick）-->
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script src="js/slick.js"></script>
+<script src="https://a-chaaa.github.io/rinakoteikoku/slick.js"></script>
 
 <!--パララックス（inview）-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/protonet-jquery.inview/1.1.2/jquery.inview.min.js"></script>
-<script src="js/jquery.inview_set.js"></script>
+<script src="https://a-chaaa.github.io/rinakoteikoku/jquery.inview_set.js"></script>
 
 <!--メニュー開閉用のスクリプト-->
 <div id="menubar_hdr"></div>
-<script src="js/openclose_tp.js"></script>
+<script src="https://a-chaaa.github.io/rinakoteikoku/openclose_tp.js"></script>
 
 <!--ページの上部へ戻るボタン-->
 <p class="pagetop"><a href="#">↑</a></p>
