--- a/access.html
+++ b/access.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>飲食店向け 無料ホームページテンプレート tp_cafe17</title>
+<title>signal and signaless</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ここにサイト説明を入れます">
 <link rel="stylesheet" href="css/style.css">
@@ -23,7 +23,6 @@
 <h2>Access<span>アクセス</span></h2>
 
 <table class="ta1">
-<caption>大見出しが必要ならここを使います</caption>
 <tr>
 <th>店名</th>
 <td>ここに説明など入れて下さい。サンプルテキスト。</td>
@@ -56,7 +55,7 @@
 <li><a href="#"><img src="images/icon_youtube.png" alt="YouTube"></a></li>
 <li><a href="#"><img src="images/icon_line.png" alt="LINE"></a></li>
 </ul>
-<small>Copyright&copy; <a href="index.html">Sample Cafe</a> All Rights Reserved.</small>
+<small>Copyright&copy; <a href="index.html">Rinako teikoku 2022</small>
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </footer>
 
@@ -64,13 +63,14 @@
 <!--/#container-->
 
 <!--メインメニュー-->
+<!--メインメニュー-->
 <nav id="menubar">
-<ul>
-<li><a href="index.html">Home<span>ホーム</span></a></li>
-<li><a href="about.html">About<span>お店について</span></a></li>
-<li><a href="menu.html">Cafe Menu<span>メニューのご紹介</span></a></li>
-<li><a href="access.html">Access<span>アクセス</span></a></li>
-</ul>
+    <ul>
+    <li><a href="about.html">Top<span>トップ</span></a></li>
+    <li><a href="index2.html">About<span>作品について</span></a></li>
+    <li><a href="index.html">Event goods<span>イベントグッズ</span></a></li>
+    <li><a href="access.html">Access<span>アクセス</span></a></li>
+    </ul>
 </nav>
 
 <!--jQueryファイルの読み込み-->
