--- a/index2.html
+++ b/index2.html
@@ -31,7 +31,7 @@
 
 <div class="list2">
 <figure class="up">
-<img src="https://a-chaaa.github.io/rinakoteikoku/miyazawa2.jpg" alt="宮沢賢治A">
+<img src="https://a-chaaa.github.io/rinakoteikoku/miyazawa2.jpg" alt="宮沢賢治">
 <figcaption>宮沢賢治</figcaption>
 </figure>
 <div class="text">
