--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 <section>
 
 <h2>Top<span>トップ</span></h2>
-無名の学生だからこそ的なことかけたらいいんじゃないかな！！
+FBで無名の学生のとこに行かないだろみたいなの書かれてたけどそれを逆手に取って的なことかけたらいいんじゃないかな！！
 
 
 </section>
