--- a/access.html
+++ b/access.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>signal and signaless</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="ここにサイト説明を入れます">
+<meta name="description" content="HYPERMIX 多目的ホール">
 <link rel="stylesheet" href="https://a-chaaa.github.io/rinakoteikoku/style.css">
 </head>
 
@@ -25,21 +25,21 @@
 <table class="ta1">
 <tr>
 <th>店名</th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<td>HYPERMIX 多目的ホール</td>
 </tr>
 <tr>
 <th>所在地</th>
-<td>Google Mapで地図を埋め込みたい場合は<a href="https://template-party.com/file/pickup_googlemap.html">マニュアル</a>をご覧下さい。<br>
+<td>Google Mapで地図を埋め込みたい場合は<a href="https://www.google.com/maps/place/HYPERMIX%E9%96%80%E5%89%8D%E4%BB%B2%E7%94%BA/@35.7068538,139.7091433,11z/data=!4m9!1m2!2m1!1zSFlQRVJNSVgg5aSa55uu55qE44Ob44O844Or!3m5!1s0x601889131264eba7:0x4885b7d23ecdf846!8m2!3d35.6734003!4d139.7951522!15sChtIWVBFUk1JWCDlpJrnm67nmoTjg5vjg7zjg6taHiIcaHlwZXJtaXgg5aSa55uu55qEIOODm-ODvOODq5IBEnBob3RvZ3JhcGh5X3N0dWRpb5oBJENoZERTVWhOTUc5blMwVkpRMEZuU1VOWmVUaHhaSGhuUlJBQg">マニュアル</a>をご覧下さい。<br>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.0448418561778!2d139.74267721573196!3d35.675897837870934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b89b2e1c8b1%3A0x59a123e3d5ac5ab6!2z44CSMTAwLTAwMTQg5p2x5Lqs6YO95Y2D5Luj55Sw5Yy65rC455Sw55S677yR5LiB55uu77yX4oiS77yR!5e0!3m2!1sja!2sjp!4v1545036128899" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </td>
 </tr>
 <tr>
 <th>電話番号</th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<td>+81358758320</td>
 </tr>
 <tr>
 <th>サイトURL</th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<td>https://hypermix.jp/</td>
 </tr>
 </table>
 
