--- a/access.html
+++ b/access.html
@@ -29,7 +29,7 @@
 </tr>
 <tr>
 <th>所在地</th>
-<td><a href="https://g.page/hypermix?share"></a><br>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207346.38099849157!2d139.7091433212387!3d35.70685384109755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601889131264eba7%3A0x4885b7d23ecdf846!2zSFlQRVJNSVjploDliY3ku7LnlLo!5e0!3m2!1sja!2sjp!4v1644551647656!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </td>
 </tr>
 <tr>
