--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>signal and signaless</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="ここにサイト説明を入れます">
+<meta name="description" content="作品について">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.css">
 <link rel="stylesheet" href="https://a-chaaa.github.io/rinakoteikoku/style.css">
 </head>
@@ -55,7 +55,24 @@
 
 決して動くことができない信号機の<br>
 彼らにできることは、相手を思い、<br>
-言葉を交わすことだけ......。
+言葉を交わすことだけ————。
+</div>
+</div>
+  
+<div class="list2">
+<figure class="up">
+<img src="https://a-chaaa.github.io/rinakoteikoku/miyazawa2.jpg" alt="人物紹介">
+<figcaption>人物紹介</figcaption>
+</figure>
+<div class="text">
+<h4>主な登場人物</h4>
+シグナル<br><br>
+  
+シグナレス<br><br>
+  
+電信柱<br><br>
+  
+倉庫の屋根
 </div>
 </div>
 
