--- a/index2.html
+++ b/index2.html
@@ -67,9 +67,9 @@
 <div class="text">
 <h4>主な登場人物</h4>
  <br>
-シグナル<br><br>
+最新型の信号機の男性　シグナル<br><br>
   
-シグナレス<br><br>
+古い木製の信号機の女性　シグナレス<br><br>
   
 電信柱<br><br>
   
