--- a/menu.html
+++ b/menu.html
@@ -124,6 +124,7 @@
 <li><a href="about.html">About<span>お店について</span></a></li>
 <li><a href="menu.html">Cafe Menu<span>メニューのご紹介</span></a></li>
 <li><a href="access.html">Access<span>アクセス</span></a></li>
+<li><a href="https://a-chaaa.github.io/rinakoteikoku/detail.html">Detail<span>詳細</span></a></li>
 </ul>
 </nav>
 
