--- a/detail.html
+++ b/detail.html
@@ -27,16 +27,12 @@
 
 <section>
 
-<h2>Top<span>トップ</span></h2>
-FBで無名の学生のとこに行かないだろみたいなの書かれてたけどそれを逆手に取って的なことかけたらいいんじゃないかな！！
+<h2>Ditail<span>詳細</span></h2>
 
 
 </section>
 
-<section>
-<h2>PV<span>プロモーションビデオ</span></h2>
-作ったPV載せたい！！
-</section>
+
 
 
 <section>
