--- a/access.html
+++ b/access.html
@@ -43,8 +43,7 @@
 </tr>
 <tr>
 <th>サイトURL</th>
-<td>https://hypermix.jp/locationshooting/hall/</td>
-</tr>
+<rinl rel ="https://hypermix.jp/locationshooting/hall/">
 </table>
 
 </section>
