--- a/access.html
+++ b/access.html
@@ -43,7 +43,7 @@
 </tr>
 <tr>
 <th>サイトURL</th>
-<rinl rel ="https://hypermix.jp/locationshooting/hall/">
+    <a href = "https://hypermix.jp/locationshooting/hall/"></a>
 </table>
 
 </section>
