--- a/about.html
+++ b/about.html
@@ -37,7 +37,21 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 <h2>PV<span>プロモーションビデオ</span></h2>
 作ったPV載せたい！！
 </section>
+  
+ <section> 
+<h2>News<span>最新情報</span></h2>
 
+<dl>
+<dt>2022/2/14</dt>
+<dd>トレカケースの詳細を更新しました！</dd>
+<dt>2022/2/7</dt>
+<dd>サーバーメンテナンスのお知らせ</dd>
+<dt>2022/2/3</dt>
+<dd>グッズビジュアル解禁！</dd>
+<dt>2022/1/14</dt>
+<dd>ﾘﾅｺ帝国、活動開始！</dd>
+</dl>
+</section>
 
 <section>
 
