--- a/about.html
+++ b/about.html
@@ -52,6 +52,12 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 <dd>ﾘﾅｺ帝国、活動開始！</dd>
 </dl>
 </section>
+  
+<section>
+  <iframe src="https://a-chaaa.github.io/rinakoteikoku/whatsnew.html" width="600" height="800">
+ インラインフレーム対応ブラウザでご覧いただけます。
+</iframe>
+</section>
 
 <section>
 
