--- a/whatsnew.html
+++ b/whatsnew.html
@@ -2,6 +2,7 @@
  <head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  <title>signall and signaless新着情報</title>
+ <link rel="stylesheet" href="https://a-chaaa.github.io/rinakoteikoku/style.css">
  </head>
  <body>
  <p>2022/02/14 <a href="https://web.syumichuu.com/hp-whatnew/" target="_parent">トレカケースの詳細を更新しました！</a></p>
