--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 
 <dl>
 <dt>2022/2/14</dt>
-<dd>トレカケースの詳細を更新しました！</dd>
+  <dd><a href ="https://a-chaaa.github.io/rinakoteikoku/whatsnew.html">トレカケースの詳細を更新しました！</a></dd>
 <dt>2022/2/7</dt>
 <dd>サーバーメンテナンスのお知らせ</dd>
 <dt>2022/2/3</dt>
@@ -51,12 +51,6 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 <dt>2022/1/14</dt>
 <dd>ﾘﾅｺ帝国、活動開始！</dd>
 </dl>
-</section>
-  
-<section>
-  <iframe src="https://a-chaaa.github.io/rinakoteikoku/whatsnew.html" width="400" height="100">
- インラインフレーム対応ブラウザでご覧いただけます。
-</iframe>
 </section>
 
 <section>
