--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 <section>
 
 <h2>Event goods<span>イベントグッズ</span></h2>
+ 
+<div style="text-align: center">    
+<img src="https://a-chaaa.github.io/rinakoteikoku/小見出しを追加.png" alt="トレカケース全8種類">
+</div>
 
 <div class="list2">
 <figure class="up">
