--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 
 <h2>Event goods<span>イベントグッズ</span></h2>
  
-<div style="text-align: center">    
+<div style="text-align: center">  
+<figure class="up">
 <img src="https://a-chaaa.github.io/rinakoteikoku/小見出しを追加.png" alt="トレカケース全8種類">
+</figure>
 </div>
 
 <div class="list2">
