--- a/about.html
+++ b/about.html
@@ -43,13 +43,13 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 
 <dl>
 <dt>2022/2/14</dt>
-  <dd><a href ="https://a-chaaa.github.io/rinakoteikoku/whatsnew.html">トレカケースの詳細を更新しました！</a></dd>
+  <dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">トレカケースの詳細を更新しました！</a></dd>
 <dt>2022/2/7</dt>
-<dd>サーバーメンテナンスのお知らせ</dd>
+  <dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">サーバーメンテナンスのお知らせ</a></dd>
 <dt>2022/2/3</dt>
-<dd>グッズビジュアル解禁！</dd>
+<dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">グッズビジュアル解禁！</a></dd>
 <dt>2022/1/14</dt>
-<dd>ﾘﾅｺ帝国、活動開始！</dd>
+<dd><a href ="https://a-chaaa.github.io/rinakoteikoku/torekanew.html">ﾘﾅｺ帝国、活動開始！</a></dd>
 </dl>
 </section>
 
