--- a/torekanew.html
+++ b/torekanew.html
@@ -27,16 +27,13 @@
 
 <section>
 
-<h2>Top<span>トップ</span></h2>
-FBで無名の学生のとこに行かないだろみたいなの書かれてたけどそれを逆手に取って的なことかけたらいいんじゃないかな！！
+<h2> トレカケースの詳細を更新しました！<span></span></h2>
+あああああ
 
 
 </section>
 
-<section>
-<h2>PV<span>プロモーションビデオ</span></h2>
-作ったPV載せたい！！
-</section>
+
   
  <section> 
 <h2>News<span>最新情報</span></h2>
