--- a/about.html
+++ b/about.html
@@ -112,6 +112,7 @@ FBで無名の学生のとこに行かないだろみたいなの書かれてた
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/about.html">Top<span>トップ</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/index2.html">About<span>作品について</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/index.html">Event goods<span>イベントグッズ</span></a></li>
+<li><a href="https://a-chaaa.github.io/rinakoteikoku/detail.html">Food menu<span>フードメニュー</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/access.html">Access<span>アクセス</span></a></li>
 <li><a href="https://a-chaaa.github.io/rinakoteikoku/detail.html">Detail<span>詳細</span></a></li>
 </ul>
