--- a/food.html
+++ b/food.html
@@ -27,7 +27,7 @@
 
 <section>
 
-<h2>Event goods<span>イベントグッズ</span></h2>
+<h2>Food menu<span>フードメニュー</span></h2>
  
 <div style="text-align: center">  
 <figure class="up">
