--- a/food.html
+++ b/food.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>signal and signaless</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="グッズ詳細">
+<meta name="description" content="愛は、時を超えて共感。推しとあなたの幸せな時間を贈ります。">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vegas/2.5.4/vegas.min.css">
 <link rel="stylesheet" href="https://a-chaaa.github.io/rinakoteikoku/style.css">
 </head>
