--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
 <header>
 <h1 id="logo"><a href="https://a-chaaa.github.io/rinakoteikoku/index.html"><img src="https://a-chaaa.github.io/rinakoteikoku/logo.png" alt="Sample Cafe"></a></h1>
 </header>
+ 
+ <nav id="menubar" class="nav-fix-pos">
+    <ul class="inner">
+    <li><a href="https://a-chaaa.github.io/rinakoteikoku/about.html">Top<span>トップ</span></a></li>
+    <li><a href="https://a-chaaa.github.io/rinakoteikoku/index2.html">About<span>作品について</span></a></li>
+    <li><a href="https://a-chaaa.github.io/rinakoteikoku/index.html">Event goods<span>イベントグッズ</span></a></li>
+    <li><a href="https://a-chaaa.github.io/rinakoteikoku/food.html">Food menu<span>フードメニュー</span></a></li>
+    <li><a href="https://a-chaaa.github.io/rinakoteikoku/access.html">Access<span>アクセス</span></a></li>
+    <li><a href="https://a-chaaa.github.io/rinakoteikoku/detail.html">Detail<span>詳細</span></a></li>
+    </ul>
+</nav>
+
+ <nav id="menubar-s">
+<ul>
+   <li><a href="https://a-chaaa.github.io/rinakoteikoku/about.html">Top<span>トップ</span></a></li>
+    <li><a href="https://a-chaaa.github.io/rinakoteikoku/index2.html">About<span>作品について</span></a></li>
+    <li><a href="https://a-chaaa.github.io/rinakoteikoku/index.html">Event goods<span>イベントグッズ</span></a></li>
+    <li><a href="https://a-chaaa.github.io/rinakoteikoku/food.html">Food menu<span>フードメニュー</span></a></li>
+    <li><a href="https://a-chaaa.github.io/rinakoteikoku/access.html">Access<span>アクセス</span></a></li>
+    <li><a href="https://a-chaaa.github.io/rinakoteikoku/detail.html">Detail<span>詳細</span></a></li>
+</ul>
+</nav>
+
 
 <div id="container">
 
@@ -130,16 +153,6 @@
 </div>
 <!--/#container-->
 
-<nav id="menubar">
-<ul>
-<li><a href="https://a-chaaa.github.io/rinakoteikoku/about.html">Top<span>トップ</span></a></li>
-<li><a href="https://a-chaaa.github.io/rinakoteikoku/index2.html">About<span>作品について</span></a></li>
-<li><a href="https://a-chaaa.github.io/rinakoteikoku/index.html">Event goods<span>イベントグッズ</span></a></li>
-<li><a href="https://a-chaaa.github.io/rinakoteikoku/food.html">Food menu<span>フードメニュー</span></a></li>
-<li><a href="https://a-chaaa.github.io/rinakoteikoku/access.html">Access<span>アクセス</span></a></li>
-<li><a href="https://a-chaaa.github.io/rinakoteikoku/detail.html">Detail<span>詳細</span></a></li>
-</ul>
-</nav>
 
 
 <!--アニメーションロゴ-->
