--- a/food.html
+++ b/food.html
@@ -29,30 +29,31 @@
 
 <h2>Food menu<span>フードメニュー</span></h2>
  
- 
+<div class="list up"> 
 <h3>スイーツ</h3>
+ </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/images/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h3>商品名</h3>
+<h4>商品名</h4>
 <p>あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。あまり詰め込みすぎると途中で切れるので注意して下さい。</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/images/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h3>商品名</h3>
+<h4>商品名</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/images/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h3>商品名</h3>
+<h4>商品名</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
 
 <div class="list up">
 <figure><img src="https://a-chaaa.github.io/rinakoteikoku/sample6.jpg" alt="和菓子名"><span>200円</span></figure>
-<h3>商品名</h3>
+<h4>商品名</h4>
 <p>ここに説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
 </div>
  
