--- a/torekanew.html
+++ b/torekanew.html
@@ -27,8 +27,8 @@
 
 <section>
 
-<h4> トレカケースの詳細を更新しました！</h4>
-あああああ
+<center><h4> トレカケースの詳細を更新しました！</h4></center>
+<center>ああああああああああ</center>
 
 
 </section>
